# tiima

./: .editorconfig  LICENSE  README.md  pyproject.toml  setup.cfg
tiima/: __init__.py  settings.py  tiima.py
