[tool.poetry]
name = "tiima"
version = "0.1.0"
description = "Python API Client for Visma Tiima"
authors = ["Frank Wickström <no-email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://gitlab.com/python-poetry/poetry"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23"
beautifulsoup4 = "^4.8"
environs = "^7.2"

[tool.poetry.dev-dependencies]
black = "=19.10b0"
flake8 = "^3.7"
isort = "^4.3"
mypy = "^0.740.0"
safety = "^1.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
